--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
   color: white;
   font-size: 25px;
   text-align: center;
-  background: linear-gradient(to right, #64b3f4, #c2e59c);
+  background: linear-gradient(to right, #86b0f0, #72d8c7);
 }
 
 .container {
